function(add_benchmark_framework TARGET)
    file(GLOB SOURCES *.cpp **/*.cpp)
    add_executable(${TARGET} ${SOURCES})
    target_link_libraries(${TARGET} benchmark)
endfunction(add_benchmark_framework TARGET)

macro(get_subdir result curdir)
    file(GLOB subitem REALTIVE ${curdir}/*)
    set(dirlist)
    foreach(item ${subitem})
        if(IS_DIRECTORY ${item})
            list(APPEND dirlist ${item})
        endif()
    set(${result} ${dirlist})
endforeach()
endmacro()

get_subdir(SUBDIRS ${CMAKE_CURRENT_LIST_DIR})
foreach(subdir ${SUBDIRS})
    add_subdirectory(${subdir})
endforeach()